--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -76,4 +76,4 @@ composeMultiplatform = { id = "org.jetbrains.compose", version.ref = "composeMul
 composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-#google-services = { id = "com.google.gms.google-services", version.ref = "google" }
+google-services = { id = "com.google.gms.google-services", version.ref = "google" }
