Make necessary changes in the GCM and enable Authentication for Google in Firebase and add SHA1 and ios bundled id mentioned - automatically iOS client for com.atulit.nutrisport.NutriSport (auto created by Google Service) is added in the GCM in which you can use the keys and reversed in the app for ios and web

--- a/iosApp/iosApp/Info.plist
+++ b/iosApp/iosApp/Info.plist
@@ -2,6 +2,19 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>GIDServerClientID</key>
+	<string>779912379083-lvfk5s3j8kulelllnmvpjhb3c9f5oi7d.apps.googleusercontent.com</string>
+	<key>GIDClientID</key>
+	<string>779912379083-gvphs746nrslb7cj723onnb0mug10d71.apps.googleusercontent.com</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.779912379083-gvphs746nrslb7cj723onnb0mug10d71</string>
+			</array>
+		</dict>
+	</array>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
 </dict>
