--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,6 @@ org.gradle.caching=true
 #Android
 android.nonTransitiveRClass=true
 android.useAndroidX=true
+
+#http://github.com/InsertKoinIO/koin/issues/2133
+kotlin.native.cacheKind=none
